# maemo-translate

./: .clang-format  CMakeLists.txt  README.md
debian/: changelog  control
desktop/: CMakeLists.txt  maemo-translate.desktop
src/: about.cpp  about.h  about.ui  ctx.cpp  ctx.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  translateinwidget.cpp  translateinwidget.h  translateinwidget.ui  translateoutwidget.cpp  translateoutwidget.h  translateoutwidget.ui
src/assets/: cyrillic-transliteration.json
src/lib/: blocking_queue.h  clion_debug.h  config.cpp  config.h  textedit.h  utils.cpp  utils.h
